--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "googleapis": "^144.0.0",
     "groq": "^3.76.1",
+    "groq-sdk": "^0.15.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "nodemon": "^3.1.9",
